<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Travel Guardian</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_login">Login</string>
    <string name="title_activity_start">Travel Guardian</string>
    <string name="logged_in_as">Logged in as</string>
    <string name="username">name@domain.com</string>
    <string name="button_sign_out">Sign Out</string>
    <string name="button_start">Start a Trip</string>
    <string name="title_activity_data_entry">Travel Guardian: Start a Trip</string>
    <string name="textView_emergency_contacts">Who would you like to contact in the event of an emergency?</string>
    <string name="edit_contacts">Enter an email address</string>
    <string name="textView_destination">Where will you be traveling to?</string>
    <string name="edit_destination">Enter location name or coordinates</string>
    <string name="textView_host">What is your host contact?</string>
    <string name="edit_host">Enter hotel/host contact info</string>
    <string name="textView_pingFrequency">GPS Ping Frequency: 0 hour(s)</string>
    <string name="button_setDate">Set Return Date</string>
    <string name="button_setTime">Set Return Time</string>
    <string name="button_startTrip">Start Trip</string>
    <string name="count_time_left1">You have</string>
    <string name="count_down_timer">29:12</string>
    <string name="time_remianing">Time remianing:</string>
    <string name="count_time_left2">to check-out</string>
    <string name="button_checkout">Check-out</string>
    <string name="button_panic">Panic!</string>
    <string name="title_activity_count__time__left">Count_Time_Left</string>
    <string name="title_activity_checked_out">CheckedOut</string>
    <string name="title_activity_broadcast">Broadcast</string>
    <string name="Sent_Notification">The following Emergency Broadcast Message has been sent to you emergency contact.</string>
    <string name="Broadcast_Message">TRAVEL GUARDIAN EMERGENCY NOTIFICATION:
                                     \nJane Doe failed to check out at 8:00pm.
                                     \nReported Destination: Vanoise National Park, Savoie, France
                                     \nLast GPS Ping: 41° 24\' 12.1674", 2° 10\' 26.508
                                     \n@ 7:45pm UTC 05/12/2014
                                     \nHost Contact: Hotel, (123) 281-2729</string>
    <string name="Congrats"><b>Congratulations!\nChecked Out Succefully!</b></string>
    

</resources>
