<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/time_left_content1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:paddingTop="20sp"
        android:text="@string/count_time_left1" />
    
    <!-- need to change to count down timer -->
     <TextView
        android:id="@+id/count_down_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:layout_below="@+id/time_left_content1"  />
    
      <TextView
        android:id="@+id/time_left_content2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:layout_below="@+id/count_down_timer"
        android:text="@string/count_time_left2" />

    <TextView
        android:id="@+id/time_remianing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/progressBar1"
        android:text="@string/time_remianing" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_alignParentBottom="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <Button
        android:id="@+id/startTrip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/button_startTrip" />

    <Button
        android:id="@+id/checkoutButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/startTrip"
        android:onClick="checkedOut"
        android:text="@string/button_checkout" />
    
    <Button
        android:id="@+id/panicButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/checkoutButton"
        android:onClick="panic"
        android:text="@string/button_panic" />

</RelativeLayout>
